// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DepositFailureNotice Renders Renders DepositFailureNotice component correctly 1`] = `
<div>
  <div
    class="wcpay-inline-notice wcpay-inline-warning-notice deposit-failure-notice components-notice is-warning"
  >
    <div
      class="components-notice__content"
    >
      <div
        class="components-flex css-bmzg3m-View-Flex-sx-Base-sx-Items-ItemsRow em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Flex"
      >
        <div
          class="components-flex-item wcpay-inline-notice__icon wcpay-inline-warning-notice__icon css-mw3lhz-View-Item-sx-Base em57xhy0"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          <svg
            class="gridicon gridicons-notice-outline"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 13h-2v2h2v-2zm-2-2h2l.5-6h-3l.5 6z"
              />
            </g>
          </svg>
        </div>
        <div
          class="components-flex-item wcpay-inline-notice__content wcpay-inline-warning-notice__content css-mw3lhz-View-Item-sx-Base em57xhy0"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          Deposits are currently paused because a recent deposit failed. Please 
          <a
            class="components-external-link"
            href="https://example.com"
            rel="external noreferrer noopener"
            target="_blank"
          >
            update your bank account details
            <span
              class="components-visually-hidden css-1mm2cvy-View em57xhy0"
              data-wp-c16t="true"
              data-wp-component="VisuallyHidden"
              style="border: 0px; clip: rect(1px, 1px, 1px, 1px); clip-path: inset( 50% ); height: 1px; margin: -1px; overflow: hidden; padding: 0px; position: absolute; width: 1px; word-wrap: normal;"
            >
              (opens in a new tab)
            </span>
            <svg
              aria-hidden="true"
              class="components-external-link__icon css-16iaek2-StyledIcon etxm6pv0"
              focusable="false"
              height="24"
              viewBox="0 0 24 24"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M18.2 17c0 .7-.6 1.2-1.2 1.2H7c-.7 0-1.2-.6-1.2-1.2V7c0-.7.6-1.2 1.2-1.2h3.2V4.2H7C5.5 4.2 4.2 5.5 4.2 7v10c0 1.5 1.2 2.8 2.8 2.8h10c1.5 0 2.8-1.2 2.8-2.8v-3.6h-1.5V17zM14.9 3v1.5h3.7l-6.4 6.4 1.1 1.1 6.4-6.4v3.7h1.5V3h-6.3z"
              />
            </svg>
          </a>
          .
        </div>
      </div>
      <div
        class="components-notice__actions"
      />
    </div>
  </div>
</div>
`;

exports[`Deposits Overview information Component Renders 1`] = `
<div>
  <div
    class="components-surface components-card wcpay-deposits-overview css-nsno0f-View-Surface-getBorders-primary-Card-rounded em57xhy0"
    data-wp-c16t="true"
    data-wp-component="Card"
  >
    <div
      class="css-mgwsf4-View-Content em57xhy0"
    >
      <div
        class="components-flex components-card__header components-card-header css-1g5oj2q-View-Flex-sx-Base-sx-Items-ItemsRow-Header-borderRadius-borderColor-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardHeader"
      >
        Deposits
      </div>
      <div
        class="components-card__body components-card-body wcpay-deposits-overview__schedule__container css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        Available funds are automatically dispatched 
        <strong>
          every Monday
        </strong>
        .
        <button
          class="wcpay-tooltip__content-wrapper wcpay-tooltip--click__content-wrapper"
          type="button"
        >
          <div
            class="wcpay-tooltip__content-wrapper"
          >
            <div
              aria-label="Deposit schedule tooltip"
              role="button"
              tabindex="0"
            >
              <svg
                class="gridicon gridicons-help-outline"
                height="16"
                viewBox="0 0 24 24"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <g>
                  <path
                    d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm4 8a4 4 0 00-8 0h2c0-1.103.897-2 2-2s2 .897 2 2-.897 2-2 2a1 1 0 00-1 1v2h2v-1.141A3.991 3.991 0 0016 10zm-3 6h-2v2h2v-2z"
                  />
                </g>
              </svg>
            </div>
          </div>
        </button>
      </div>
      <div
        class="components-card__body components-card-body wcpay-deposits-overview__notices__container css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div
          class="wcpay-inline-notice wcpay-inline-undefined-notice wcpay-deposit-transit-days-notice components-notice is-info"
        >
          <div
            class="components-notice__content"
          >
            <div
              class="components-flex css-bmzg3m-View-Flex-sx-Base-sx-Items-ItemsRow em57xhy0"
              data-wp-c16t="true"
              data-wp-component="Flex"
            >
              <div
                class="components-flex-item wcpay-inline-notice__icon wcpay-inline-undefined-notice__icon css-mw3lhz-View-Item-sx-Base em57xhy0"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                <svg
                  aria-hidden="true"
                  focusable="false"
                  height="24"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M12 15.8c-3.7 0-6.8-3-6.8-6.8s3-6.8 6.8-6.8c3.7 0 6.8 3 6.8 6.8s-3.1 6.8-6.8 6.8zm0-12C9.1 3.8 6.8 6.1 6.8 9s2.4 5.2 5.2 5.2c2.9 0 5.2-2.4 5.2-5.2S14.9 3.8 12 3.8zM8 17.5h8V19H8zM10 20.5h4V22h-4z"
                  />
                </svg>
              </div>
              <div
                class="components-flex-item wcpay-inline-notice__content wcpay-inline-undefined-notice__content css-mw3lhz-View-Item-sx-Base em57xhy0"
                data-wp-c16t="true"
                data-wp-component="FlexItem"
              >
                It may take 1-3 business days for deposits to reach your bank account.
              </div>
            </div>
            <div
              class="components-notice__actions"
            />
          </div>
        </div>
      </div>
      <div
        class="components-card__body components-card-body wcpay-deposits-overview__heading css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <span
          class="wcpay-deposits-overview__heading__title"
        >
          Deposit history
        </span>
      </div>
      <div
        class="components-card__body components-card-body wcpay-deposits-overview__table__container css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div
          class="components-flex wcpay-deposits-overview__table__row__header css-1giw1wa-View-Flex-sx-Base-sx-Items-ItemsRow em57xhy0"
          data-wp-c16t="true"
          data-wp-component="Flex"
        >
          <div
            class="components-flex-item wcpay-deposits-overview__table__cell css-mw3lhz-View-Item-sx-Base em57xhy0"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            Dispatch date
          </div>
          <div
            class="components-flex-item wcpay-deposits-overview__table__cell css-mw3lhz-View-Item-sx-Base em57xhy0"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            Status
          </div>
          <div
            class="components-flex-item wcpay-deposits-overview__table__cell css-mw3lhz-View-Item-sx-Base em57xhy0"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            Amount
          </div>
        </div>
      </div>
      <hr
        aria-orientation="horizontal"
        class="components-divider components-card__divider components-card-divider css-yo8r29-DividerView-renderBorder-renderSize-renderMargin-Divider-borderColor e19on6iw0"
        data-wp-c16t="true"
        data-wp-component="CardDivider"
        role="separator"
      />
      <div
        class="components-card__body components-card-body wcpay-deposits-overview__table__container css-1nwhnu3-View-Body-borderRadius-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardBody"
      >
        <div
          class="components-flex wcpay-deposits-overview__table__row css-1giw1wa-View-Flex-sx-Base-sx-Items-ItemsRow em57xhy0"
          data-wp-c16t="true"
          data-wp-component="Flex"
        >
          <div
            class="components-flex-item wcpay-deposits-overview__table__cell css-mw3lhz-View-Item-sx-Base em57xhy0"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              height="17"
              viewBox="0 0 24 24"
              width="17"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm.5 16c0 .3-.2.5-.5.5H5c-.3 0-.5-.2-.5-.5V7h15v12zM9 10H7v2h2v-2zm0 4H7v2h2v-2zm4-4h-2v2h2v-2zm4 0h-2v2h2v-2zm-4 4h-2v2h2v-2zm4 0h-2v2h2v-2z"
              />
            </svg>
            <a
              data-link-type="wc-admin"
              href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock1"
            >
              January 2, 2020
            </a>
          </div>
          <div
            class="components-flex-item wcpay-deposits-overview__table__cell css-mw3lhz-View-Item-sx-Base em57xhy0"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            <span
              class="chip chip-success"
            >
              Paid
            </span>
          </div>
          <div
            class="components-flex-item wcpay-deposits-overview__table__cell css-mw3lhz-View-Item-sx-Base em57xhy0"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            $20.00
          </div>
        </div>
        <div
          class="components-flex wcpay-deposits-overview__table__row css-1giw1wa-View-Flex-sx-Base-sx-Items-ItemsRow em57xhy0"
          data-wp-c16t="true"
          data-wp-component="Flex"
        >
          <div
            class="components-flex-item wcpay-deposits-overview__table__cell css-mw3lhz-View-Item-sx-Base em57xhy0"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            <svg
              aria-hidden="true"
              focusable="false"
              height="17"
              viewBox="0 0 24 24"
              width="17"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M19 3H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2zm.5 16c0 .3-.2.5-.5.5H5c-.3 0-.5-.2-.5-.5V7h15v12zM9 10H7v2h2v-2zm0 4H7v2h2v-2zm4-4h-2v2h2v-2zm4 0h-2v2h2v-2zm-4 4h-2v2h2v-2zm4 0h-2v2h2v-2z"
              />
            </svg>
            <a
              data-link-type="wc-admin"
              href="admin.php?page=wc-admin&path=%2Fpayments%2Fdeposits%2Fdetails&id=po_mock2"
            >
              January 3, 2020
            </a>
          </div>
          <div
            class="components-flex-item wcpay-deposits-overview__table__cell css-mw3lhz-View-Item-sx-Base em57xhy0"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            <span
              class="chip chip-warning"
            >
              Pending
            </span>
          </div>
          <div
            class="components-flex-item wcpay-deposits-overview__table__cell css-mw3lhz-View-Item-sx-Base em57xhy0"
            data-wp-c16t="true"
            data-wp-component="FlexItem"
          >
            $30.00
          </div>
        </div>
      </div>
      <div
        class="components-flex components-card__footer components-card-footer wcpay-deposits-overview__footer css-p1v47q-View-Flex-sx-Base-sx-Items-ItemsRow-Footer-borderRadius-borderColor-medium em57xhy0"
        data-wp-c16t="true"
        data-wp-component="CardFooter"
      >
        <button
          class="components-button is-secondary"
          type="button"
        >
          View full deposits history
        </button>
        <a
          class="components-button is-tertiary"
          href="admin.php?page=wc-settings&tab=checkout&section=woocommerce_payments#deposit-schedule"
        >
          Change deposit schedule
        </a>
      </div>
    </div>
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
    <div
      aria-hidden="true"
      class="components-elevation css-91yjwm-View-Elevation-sx-Base-elevationClassName em57xhy0"
      data-wp-c16t="true"
      data-wp-component="Elevation"
    />
  </div>
</div>
`;

exports[`Suspended Deposit Notice Renders Component Renders 1`] = `
<div>
  <div
    class="wcpay-inline-notice wcpay-inline-warning-notice wcpay-deposits-overview__suspended-notice components-notice is-warning"
  >
    <div
      class="components-notice__content"
    >
      <div
        class="components-flex css-bmzg3m-View-Flex-sx-Base-sx-Items-ItemsRow em57xhy0"
        data-wp-c16t="true"
        data-wp-component="Flex"
      >
        <div
          class="components-flex-item wcpay-inline-notice__icon wcpay-inline-warning-notice__icon css-mw3lhz-View-Item-sx-Base em57xhy0"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          <svg
            class="gridicon gridicons-notice-outline"
            height="24"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <g>
              <path
                d="M12 4c4.411 0 8 3.589 8 8s-3.589 8-8 8-8-3.589-8-8 3.589-8 8-8m0-2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10S17.523 2 12 2zm1 13h-2v2h2v-2zm-2-2h2l.5-6h-3l.5 6z"
              />
            </g>
          </svg>
        </div>
        <div
          class="components-flex-item wcpay-inline-notice__content wcpay-inline-warning-notice__content css-mw3lhz-View-Item-sx-Base em57xhy0"
          data-wp-c16t="true"
          data-wp-component="FlexItem"
        >
          Your deposits are 
          <strong>
            temporarily suspended
          </strong>
          . 
          <a
            data-link-type="wc-admin"
            href="https://woo.com/document/woopayments/deposits/why-deposits-suspended/"
          >
            Learn more
          </a>
        </div>
      </div>
      <div
        class="components-notice__actions"
      />
    </div>
  </div>
</div>
`;
